The calculator now works with longer operations and Ignores double operators

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./images/icon-calculator.png">
     <title>Mini-Calculator</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             </div>
             <div class="buttons">
                 <button id="delete" class="r1">
-                    <img src="delete.png" alt="">
+                    <img src="./images/delete.png" alt="">
                 </button>
                 <button id="multiply" class="r1 op">×</button>
                 <button id="divide" class="r1 op">÷</button>
